@@ -108,6 +108,9 @@ Piet van Bruggen	pietvb at newbridges dot nl
 					Bug fix.
 Makoto Kato		raven at oldskool dot jp
 					AMD64 port.
-Panagiotis E. Hadjidoukas	peh at hpclab dot ceid dotupatras dot gr
+Panagiotis E. Hadjidoukas	peh at hpclab dot ceid dot upatras dot gr
 					Contributed the QueueUserAPCEx package which
 					makes preemptive async cancelation possible.
+
+Will Bryant			will dot bryant at ecosm dot com
+					Borland compiler patch and makefile.
